--- a/reg-form.html
+++ b/reg-form.html
@@ -149,7 +149,7 @@
       alert("Registration successful! User data saved in local storage.");
       form.reset();
 
-      window.location.href = "login-form.html";
+      window.location.href = "index.html";
     });
   </script>
 
